--- a/ransom/http_parser/ex/NOTES.org
+++ b/ransom/http_parser/ex/NOTES.org
@@ -13,8 +13,10 @@
   - lots of precise exceptions for raising at appropriate points
     (e.g. BadVersion, BadStatusCode, etc.)
 ** TODOs
-*** TODO Parsing [1/3]
-    - [ ] Use something like =re.Scanner= or wapiti's =Lexer=
+*** DONE Parsing [3/3]
+    CLOSED: [2014-03-03 Mon 08:49]
+    - [X] Use something like =re.Scanner= or wapiti's =Lexer=
+      + MOVED TO [[absorption][ABSORPTION]]
     - [X] Investigate =bytearrays= (memory efficiency is less
       important than speed, so strings win)
       : mrw@hammal:~$ python -m timeit -s "import string; \
@@ -23,16 +25,23 @@
       : mrw@hammal:~$ python -m timeit -s "import string; \
       : > y = (string.lowercase)" "y[10:]"
       : 10000000 loops, best of 3: 0.0562 usec per loop
-    - [ ] =StatusLine= and =RequestLine= currently assume their =bstr=
+    - [X] =StatusLine= and =RequestLine= currently assume their =bstr=
       terminates in CLRF.  That makes =Request='s and =Response='s parsing job too
       hard, so move that assertion into those classes.
-*** TODO Naming
+*** DONE Naming
+    CLOSED: [2014-03-03 Mon 08:47]
     Bad vs Invalid for exceptions -- choose one!
-*** TODO Absorption
-    To reduce function call overhead it should be possible to collect
-    sub-productions' regular expression and splice them upward into
-    their parents'.  For example: =StatusLine= currently calls
-    =HTTPVersion= and =StatusCode= to parse their namesakes in an
-    error-aware way.  Instead, use a metaclass to collect each
-    =advancer= so they can be assembled into a =fastfrombytes(...)= method.
+*** TODO Absorption # <<absorption>>
+    - [ ] To reduce function call overhead it should be possible to
+      collect sub-productions' regular expression and splice them
+      upward into their parents'.  For example: =StatusLine= currently
+      calls =HTTPVersion= and =StatusCode= to parse their namesakes in
+      an error-aware way.  Instead, use a metaclass to collect each
+      =advancer= so they can be assembled into a =fastfrombytes(...)=
+      method.
+    - [ ] Use something like =re.Scanner= or wapiti's =Lexer=
+*** TODO Testing
+    - [ ] set up pytest-cov
+    - [ ] improve coverage
+    - [ ] setup tox to test python 3.3 support
 *** TODO Body, features, etc. -- More todos!
